apps/demoapp/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
        - name: demoapp
          image: demoapp  # just a placeholder; overlay will replace it
          ports:
            - containerPort: 80
