apps/demoapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  labels:
    app: demoapp
spec:
  selector:
    app: demoapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
