apps/demoapp/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
spec:
  rules:
    - host: demoapp.default.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 80
